cluster/apps/networking/pihole/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-tcp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-svc"
    metallb.universe.tf/loadBalancerIPs: |-
      ${CLUSTER_SVC_LAN_DNS_IP}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: pihole-dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
  selector:
    app.kubernetes.io/name: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-udp
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-svc"
    metallb.universe.tf/loadBalancerIPs: |-
      ${CLUSTER_SVC_LAN_DNS_IP}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: pihole-dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
  selector:
    app.kubernetes.io/name: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-svc"
    metallb.universe.tf/loadBalancerIPs: |-
      ${CLUSTER_SVC_LAN_DNS_IP}
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: pihole-http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: pihole-https
      protocol: TCP
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: pihole
